--- a/css/main.css
+++ b/css/main.css
@@ -26,3 +26,20 @@ body {
   .header h1 {
     color: #000;
   }
+
+  .features {
+    margin: 4em auto;
+    padding: 1em;
+    position: relative;
+    text-align: center;
+  }
+  .feature-title {
+    color: #333;
+    font-size: 1.3rem;
+    font-weight: 700;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  .features img {
+    margin-bottom: 16px;
+  }
